clap_derive/tests/ui/clap_empty_attr.stderr
error: expected attribute arguments in parentheses: #[clap(...)]
 --> $DIR/clap_empty_attr.rs:4:1
  |
4 | #[clap]
  | ^^^^^^^

error: expected parentheses: #[clap(...)]
 --> $DIR/clap_empty_attr.rs:9:12
  |
9 |     #[clap = "short"]
  |            ^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
 --> $DIR/clap_empty_attr.rs:3:10
  |
3 | #[derive(Clap, Debug)]
  |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`

error[E0277]: the trait bound `Opt1: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
 --> $DIR/clap_empty_attr.rs:7:10
  |
7 | #[derive(Clap, Debug)]
  |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt1`
